--- a/tedstyle.css
+++ b/tedstyle.css
@@ -12,3 +12,9 @@ h3 { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 p { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; 
     font-size: 14px; font-style: normal; font-variant: normal; 
     font-weight: 400; line-height: 20px; }
+
+a {
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; 
+    font-size: 14px; font-style: normal; font-variant: normal; 
+    font-weight: 400; line-height: 20px
+}
